--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 <body>
 
 <ul>
-	<li><a href="./pages/mediapipe.html">mediapipe</a></li>
+	<li><a href="./pages/hands.html">hands</a></li>
+	<li><a href="./pages/facemesh.html">facemesh</a></li>
 </ul>
   
 </body>
