--- a/pages/facemesh.html
+++ b/pages/facemesh.html
@@ -11,7 +11,7 @@
 <body>
   <div class="container">
     <video class="input_video"></video>
-    <canvas class="output_canvas" width="1280px" height="720px"></canvas>
+    <canvas class="output_canvas"></canvas>
   </div>
 </body>
 <script type="module">
