--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <ul>
 	<li><a href="./pages/hands.html">hands</a></li>
 	<li><a href="./pages/facemesh.html">facemesh</a></li>
+	<li><a href="./pages/spyroom_gallery-ss.html">スパイ教室 Gallery SS</a></li>
 </ul>
   
 </body>
